fix: missing color for user marker

--- a/src/scss/components/_markers.scss
+++ b/src/scss/components/_markers.scss
@@ -87,6 +87,10 @@
   }
 }
 
+.user-marker {
+  fill: $primary;
+}
+
 .marker-group {
   .marker-group-bg,
   .marker-group-fg {
